Update some nested lists to divs and spans

--- a/css/styles.css
+++ b/css/styles.css
@@ -78,8 +78,8 @@ body {
   line-height: 1.2em;
 }
 
-.alerts-img {
-  width: 10%;
+.destination, .direction, .time, .freq {
+  display: block;
 }
 
 .time-info, .reroute-info  {
